# opencv-document-contour

./: .gitignore  CMakeLists.txt  README.md
src/cpp/: DocumentContourProcessorAdvanced.cpp  DocumentContourProcessorAdvancedWhite.cpp  DocumentContourProcessorSimple1.cpp  DocumentContourProcessorSimple2.cpp  DocumentContourProcessorSimple3.cpp  DocumentContourProcessorSimple4.cpp  FindDocumentContour.cpp  Utils.cpp
src/include/: DocumentContourProcessorAdvanced.h  DocumentContourProcessorAdvancedWhite.h  DocumentContourProcessorSimple1.h  DocumentContourProcessorSimple2.h  DocumentContourProcessorSimple3.h  DocumentContourProcessorSimple4.h  Utils.h
